# hey-claude

./: .gitignore  CLAUDE.md  PLAN.md  README.md  SECURITY.md  config.example.toml  pyproject.toml
extension/: extension.js  metadata.json  stylesheet.css
extension/schemas/: org.gnome.shell.extensions.hey-claude.gschema.xml
heyclauded/: __init__.py  __main__.py  audio.py  claude.py  config.py  daemon.py  speech.py  stt.py  tts.py
heyclauded.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: install-daemon.sh  install-extension.sh  m1-pipeline.py
systemd/: hey-claude.service.in  org.kdc.HeyClaude.service.in
