[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "heyclauded"
version = "0.3.0"
description = "Push-to-talk voice assistant daemon for GNOME that talks to Claude Code"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0",
    "dbus-fast>=2.0",
]

[project.urls]
Homepage = "https://github.com/ianpogi5/hey-claude"

[project.scripts]
heyclauded = "heyclauded.__main__:main"

[tool.setuptools]
packages = ["heyclauded"]
